@@ -6,6 +6,8 @@ python-apt (0.8.3) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * lp:~mvo/python-apt/debfile-multiarch:
     - add multiarch support to the debfile.py code
+  * tests/test_apt_cache.py:
+    - add additional check if provides test can actually be run
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 08 Dec 2011 17:26:37 +0100
 
